[package]
name = "espc3lib"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
esp-idf-hal = { version = "0.38.0", optional = true }
esp-idf-sys = { version = "0.31.7", optional = true }

[features]
create = ["esp-idf-sys", "esp-idf-hal"]

[[example]]
name = "digital"
path = "examples/digital.rs"
required-features = ["create"]

[[example]]
name = "pwm"
path = "examples/pwm.rs"
required-features = ["create"]

[[example]]
name = "rainbow"
path = "examples/rainbow.rs"
required-features = ["create"]

[dev-dependencies]
anyhow = "1.0.60"
